--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -137,3 +137,15 @@ templates:
       eventHandlers:
         - event: MemberTokenAdded(indexed address)
           handler: handleMemberTokenAdded
+        - event: MemberTokenRemoved(indexed address)
+          handler: handleMemberTokenRemoved
+        - event: OnlyOwnerCanMint(indexed bool)
+          handler: handleOnlyOwnerCanMint
+        - event: OnlyTrustedCanMint(indexed bool)
+          handler: handleOnlyTrustedCanMint
+        - event: OwnerChanged(indexed address,indexed address)
+          handler: handleOwnerChanged
+        - event: Suspended(indexed address)
+          handler: handleSuspended
+        - event: Minted(indexed address,uint256,uint256,uint256)
+          handler: handleMinted
